# synth-mcp-claude-plugin

./: .gitignore  .mcp.json  AGENTS.md  README.md  collections.ts  package-lock.json  package.json  pyproject.toml  server.ts  specs.ts  start.mjs  tsconfig.json  types.ts
.claude-plugin/: plugin.json
src/synth_mcp/: server.py
tests/: test_eviction.py  test_query.py
