[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synth-mcp"
version = "0.2.1"
description = "Research synthesis MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0,<2",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
# Runtime `uv run` must NOT sync the dev group (pytest): doing so rebuilds the
# venv and re-downloads dev tools on every MCP launch, blowing the 30s MCP
# startup timeout. Empty default-groups => `uv run` syncs prod deps only.
default-groups = []

[tool.hatch.build.targets.wheel]
packages = ["src/synth_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
